# griddy

./: Cargo.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: chunk.rs  errors.rs  image.rs  lib.rs  main.rs  parsed_chunks.rs  pixel.rs  prelude.rs
src/data_structures/: ancillary_chunks.rs  chunk.rs  image.rs  mod.rs  parsed_chunks.rs  pixel.rs  png.rs
src/errors/: mod.rs
src/utils/: constants.rs
tests/: unit_test.rs
