[package]
name = "griddy"
version = "0.1.0"
edition = "2021"

[lib]
name = "griddy"
path = "src/lib.rs"

[[bin]]
name = "griddy"
path = "src/bin/main.rs"

[dependencies]
crc32fast = "1.3.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false